--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="first">
         <div class="logo-links">
-            <img src="/img/bulb.png" alt="logo">
+            <img src="/img/logo.jpg" alt="logo">
             <ul class="links">
                 <li><a href="https://www.theodinproject.com/">All paths</a></li>
                 <li><a href="https://www.theodinproject.com/">lead to</a></li>
@@ -57,10 +57,16 @@
         <p id="two">-Lrrrr, tree herder</p>
     </div>
     <div class="fourth">
-
+        <div class="call">
+            <div class="text">
+                <p id="three">Call to action1 It's time!</p>
+                <p id="four">Sign up for our product by clicking the button right over there</p>
+            </div>
+            <button>Sign up</button>
+        </div>
     </div>
     <div class="copyright">
-
+        <p>Copytright &copy The Odin Project 2022</p>
     </div>
 </body>
 </html>
