--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="fourth">
         <div class="call">
             <div class="text">
-                <p id="three">Call to action1 It's time!</p>
+                <p id="three">Call to action! It's time!</p>
                 <p id="four">Sign up for our product by clicking the button right over there</p>
             </div>
             <button>Sign up</button>
